// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from 'react-native-reanimated';
function Box() {
  const style = useAnimatedStyle(require("react-native-worklets/.worklets/1509422450054.js").default({}));
}"
`;

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = () => ({
    width: 100
  });
  testJs1.__closure = {};
  testJs1.__workletHash = 1509422450054;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundle mode) closure handling captures locally bound variables shadowing globals 1`] = `
"export default (function f_testJs1Factory({
  console
}) {
  const f = function () {
    console.log(console);
  };
  f.__closure = {
    console
  };
  f.__workletHash = 5363195507870;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core (bundle mode) closure handling captures multiple closure variables 1`] = `
"export default (function foo_testJs1Factory({
  a,
  b
}) {
  const foo = function () {
    return a + b;
  };
  foo.__closure = {
    a,
    b
  };
  foo.__workletHash = 227435842223;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) closure handling does not capture default globals 1`] = `
"export default (function f_testJs1Factory({}) {
  const f = function () {
    console.log('hi');
    return Math.random();
  };
  f.__closure = {};
  f.__workletHash = 12892866902550;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core (bundle mode) without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/919891681460.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 919891681460;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 1`] = `"const foo = require("react-native-worklets/.worklets/11633341088429.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 11633341088429;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 1`] = `
"const foo = {
  bar: require("react-native-worklets/.worklets/12638252513242.js").default({})
};"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 2`] = `
"export default (function bar_testJs1Factory({}) {
  const bar = function (x) {
    return x + 2;
  };
  bar.__closure = {};
  bar.__workletHash = 12638252513242;
  bar.__pluginVersion = "x.y.z";
  return bar;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/11633341088429.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 11633341088429;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/919891681460.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 919891681460;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundleless mode) autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from 'react-native-reanimated';
const _worklet_1509422450054_init_data = {
  code: "function testJs1(){return{width:100};}",
  location: "test.js"
};
function Box() {
  const style = useAnimatedStyle(function testJs1Factory({
    _worklet_1509422450054_init_data
  }) {
    const _e = [new global.Error(), 1, -27];
    const testJs1 = () => ({
      width: 100
    });
    testJs1.__closure = {};
    testJs1.__workletHash = 1509422450054;
    testJs1.__pluginVersion = "x.y.z";
    testJs1.__initData = _worklet_1509422450054_init_data;
    testJs1.__stackDetails = _e;
    return testJs1;
  }({
    _worklet_1509422450054_init_data
  }));
}"
`;

exports[`babel plugin core (bundleless mode) closure handling captures locally bound variables shadowing globals 1`] = `
"const console = {
  log: () => 42
};
const _worklet_5363195507870_init_data = {
  code: "function f_testJs1(){const{console}=this.__closure;console.log(console);}",
  location: "test.js"
};
const f = function f_testJs1Factory({
  _worklet_5363195507870_init_data,
  console
}) {
  const _e = [new global.Error(), -2, -27];
  const f = function () {
    console.log(console);
  };
  f.__closure = {
    console
  };
  f.__workletHash = 5363195507870;
  f.__pluginVersion = "x.y.z";
  f.__initData = _worklet_5363195507870_init_data;
  f.__stackDetails = _e;
  return f;
}({
  _worklet_5363195507870_init_data,
  console
});"
`;

exports[`babel plugin core (bundleless mode) closure handling captures multiple closure variables 1`] = `
"const a = 1;
const b = 2;
const _worklet_227435842223_init_data = {
  code: "function foo_testJs1(){const{a,b}=this.__closure;return a+b;}",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_227435842223_init_data,
  a,
  b
}) {
  const _e = [new global.Error(), -3, -27];
  const foo = function () {
    return a + b;
  };
  foo.__closure = {
    a,
    b
  };
  foo.__workletHash = 227435842223;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_227435842223_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_227435842223_init_data,
  a,
  b
});"
`;

exports[`babel plugin core (bundleless mode) closure handling does not capture default globals 1`] = `
"const _worklet_12892866902550_init_data = {
  code: "function f_testJs1(){console.log('hi');return Math.random();}",
  location: "test.js"
};
const f = function f_testJs1Factory({
  _worklet_12892866902550_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const f = function () {
    console.log('hi');
    return Math.random();
  };
  f.__closure = {};
  f.__workletHash = 12892866902550;
  f.__pluginVersion = "x.y.z";
  f.__initData = _worklet_12892866902550_init_data;
  f.__stackDetails = _e;
  return f;
}({
  _worklet_12892866902550_init_data
});"
`;

exports[`babel plugin core (bundleless mode) without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes ArrowFunctionExpression 1`] = `
"const _worklet_919891681460_init_data = {
  code: "function testJs1(x){return x+2;}",
  location: "test.js"
};
const foo = function testJs1Factory({
  _worklet_919891681460_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 919891681460;
  testJs1.__pluginVersion = "x.y.z";
  testJs1.__initData = _worklet_919891681460_init_data;
  testJs1.__stackDetails = _e;
  return testJs1;
}({
  _worklet_919891681460_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes FunctionDeclaration 1`] = `
"const _worklet_11633341088429_init_data = {
  code: "function foo_testJs1(x){return x+2;}",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_11633341088429_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 11633341088429;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_11633341088429_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_11633341088429_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes ObjectMethod 1`] = `
"const _worklet_12638252513242_init_data = {
  code: "function bar_testJs1(x){return x+2;}",
  location: "test.js"
};
const foo = {
  bar: function bar_testJs1Factory({
    _worklet_12638252513242_init_data
  }) {
    const _e = [new global.Error(), 1, -27];
    const bar = function (x) {
      return x + 2;
    };
    bar.__closure = {};
    bar.__workletHash = 12638252513242;
    bar.__pluginVersion = "x.y.z";
    bar.__initData = _worklet_12638252513242_init_data;
    bar.__stackDetails = _e;
    return bar;
  }({
    _worklet_12638252513242_init_data
  })
};"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes named FunctionExpression 1`] = `
"const _worklet_11633341088429_init_data = {
  code: "function foo_testJs1(x){return x+2;}",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_11633341088429_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 11633341088429;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_11633341088429_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_11633341088429_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes unnamed FunctionExpression 1`] = `
"const _worklet_919891681460_init_data = {
  code: "function testJs1(x){return x+2;}",
  location: "test.js"
};
const foo = function testJs1Factory({
  _worklet_919891681460_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 919891681460;
  testJs1.__pluginVersion = "x.y.z";
  testJs1.__initData = _worklet_919891681460_init_data;
  testJs1.__stackDetails = _e;
  return testJs1;
}({
  _worklet_919891681460_init_data
});"
`;
